[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sphc"
version = "1.0.1"
authors = [
  { name="Shekhar Tiwatne", email="pythonic@gmail.com" },
]
description = "Simple Pythonic HTML Creator"
readme = "README.md"
requires-python = ">=3"
license = { text = "MIT" }
keywords = ["html", "pythonic", "html-generator", "web-development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
]

[project.urls]
"Homepage" = "https://shon.github.io"
"Source" = "https://github.com/shon/sphc"
